[gd_scene format=3 uid="uid://cvcfxk0einj7l"]

[ext_resource type="Texture2D" uid="uid://carwaymivooak" path="res://icon.svg" id="1_f14ix"]
[ext_resource type="Script" uid="uid://c65rqw3f1iyvh" path="res://Jeremias/Ennemies/ice_agent.gd" id="1_qsr7u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qsr7u"]
size = Vector2(128, 128)

[node name="IceAgent" type="CharacterBody2D" unique_id=434924876]
collision_mask = 32769
script = ExtResource("1_qsr7u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=915566340]
shape = SubResource("RectangleShape2D_qsr7u")

[node name="Sprite2D" type="Sprite2D" parent="." unique_id=1403450146]
texture = ExtResource("1_f14ix")

[node name="IdleTimer" type="Timer" parent="." unique_id=713930349]
one_shot = true

[node name="FloorCheck" type="RayCast2D" parent="." unique_id=1426091649]
position = Vector2(-68, 16)
collision_mask = 32768

[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
